refactor: add node-based model
normal (static) node-based rendering works fine now, but skeletal animation is still borked fr fr.

Signed-off-by: etieskrill <etiebr@gmail.com>